# rpgmapper

./: .gitignore  CMakeLists.txt  LICENSE-GPL-3.0.txt  README  README.md  config.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
include/QtTAR/: QtTAR  qttar.h
include/rpgmapper/: atlas.hpp  atlas_io.hpp  atlas_name_validator.hpp  atlas_pointer.hpp  atlas_writer.hpp  average.hpp  base.hpp  changeable.hpp  colorpalette.hpp  colorpalette_pointer.hpp  common_macros.h  controller.hpp  coordinate_system.hpp  coordinates.hpp  field.hpp  field_pointer.hpp  file.hpp  filesystem.hpp  io_result.hpp  layer.hpp  map.hpp  map_name_validator.hpp  map_pointer.hpp  maps.hpp  nameable.hpp  numerals.hpp  operation_result.hpp  reader_result.hpp  region.hpp  region_name_validator.hpp  region_pointer.hpp  regions.hpp  resource.hpp  resource_collection.hpp  resource_collection_pointer.hpp  resource_db.hpp  resource_db_pointer.hpp  resource_loader.hpp  resource_pointer.hpp  resource_type.hpp  (+15 more)
include/rpgmapper/command/: additive_tile_placer.hpp  atlas_command.hpp  atlas_set_name.hpp  command.hpp  command_pointer.hpp  commands.hpp  composite_command.hpp  create_map.hpp  create_region.hpp  erase_field.hpp  exclusive_tile_placer.hpp  nop.hpp  place_tile.hpp  processor.hpp  processor_pointer.hpp  prozessor.hpp  remove_map.hpp  remove_region.hpp  resize_map.hpp  set_atlas_name.hpp  set_map_axis_font.hpp  set_map_axis_font_color.hpp  set_map_background_color.hpp  set_map_background_image.hpp  set_map_background_image_render_mode.hpp  set_map_background_rendering.hpp  set_map_grid_color.hpp  set_map_margin.hpp  set_map_margins.hpp  set_map_name.hpp  set_map_numeral_axis.hpp  set_map_numeral_offset.hpp  set_map_origin.hpp  set_region_name.hpp
include/rpgmapper/ctrl/: controller.hpp  file.hpp
include/rpgmapper/exception/: invalid_atlas.hpp  invalid_atlasname.hpp  invalid_field.hpp  invalid_json.hpp  invalid_map.hpp  invalid_mapname.hpp  invalid_region.hpp  invalid_regionname.hpp  invalid_session.hpp
lib/: CMakeLists.txt
lib/QtTAR/: CMakeLists.txt  qttar.cpp  tarball.cpp
lib/rpgmapper/: CMakeLists.txt  atlas.cpp  atlas_impl.cpp  atlas_impl.hpp  atlas_io.cpp  atlas_name_validator.cpp  atlas_writer.cpp  changeable.cpp  colorpalette.cpp  content.hpp  controller.cpp  coordinate_system.cpp  field.cpp  file.cpp  filesystem.cpp  layer.cpp  layer_impl.cpp  layer_impl.hpp  map.cpp  map_impl.cpp  map_impl.hpp  map_name_validator.cpp  map_name_validator.hpp  nameable.cpp  nameable.hpp  numerals.cpp  region.cpp  region_impl.cpp  region_impl.hpp  region_name_validator.cpp  resource.cpp  resource_collection.cpp  resource_db.cpp  resource_loader.cpp  resource_type.cpp  selection.cpp  session.cpp  session_aware.cpp  session_object.cpp  shape.cpp  (+6 more)
lib/rpgmapper/command/: additive_tile_placer.cpp  atlas_command.cpp  atlas_set_name.cpp  composite_command.cpp  create_map.cpp  create_region.cpp  erase_field.cpp  exclusive_tile_placer.cpp  place_tile.cpp  processor.cpp  processor_impl.cpp  processor_impl.hpp  prozessor.cpp  prozessor_impl.cpp  prozessor_impl.hpp  remove_map.cpp  remove_region.cpp  resize_map.cpp  set_atlas_name.cpp  set_map_axis_font.cpp  set_map_axis_font_color.cpp  set_map_background_color.cpp  set_map_background_image.cpp  set_map_background_image_render_mode.cpp  set_map_background_rendering.cpp  set_map_grid_color.cpp  set_map_marging.cpp  set_map_margings.cpp  set_map_name.cpp  set_map_numeral_axis.cpp  set_map_numeral_offset.cpp  set_map_origin.cpp  set_region_name.cpp
lib/rpgmapper/ctrl/: CMakeLists.txt  controller.cpp  file.cpp
lib/rpgmapper/io/: atlas_io.cpp  reader_result.cpp  zip.cpp  zip.hpp
lib/rpgmapper/layer/: axis_layer.cpp  background.cpp  background.hpp  background_layer.cpp  background_layer.hpp  background_renderer.cpp  backgroundlayer.cpp  backgroundlayer.hpp  base_layer.cpp  base_layer.hpp  grid_layer.cpp  grid_layer.hpp  gridlayer.cpp  gridlayer.hpp  image_render_mode.cpp  layer.cpp  layer_impl.cpp  layer_impl.hpp  layer_stack.cpp  text_layer.cpp  text_layer.hpp  tile_layer.cpp  tile_layer.hpp
lib/rpgmapper/model/: CMakeLists.txt  atlas.cpp  changeable.cpp  map.cpp  nameable.cpp  region.cpp
lib/rpgmapper/numeralconverter/: alpha_big.cpp  alpha_big.hpp  alpha_small.cpp  alpha_small.hpp  alphabetic.cpp  alphabetic.hpp  numerals.cpp  numeric.cpp  numeric.hpp  roman.cpp  roman.hpp
lib/rpgmapper/resource/: background.cpp  colorpalette.cpp  resource.cpp  resource_collection.cpp  resource_db.cpp  resource_loader.cpp  resource_type.cpp  shape.cpp  shape_catalog.cpp
lib/rpgmapper/tile/: color_tile.cpp  color_tile.hpp  shape_tile.cpp  shape_tile.hpp  tile.cpp  tile_factory.cpp  tile_insert_modes.cpp
lib/rpgmapper/tiles/: color_tile.cpp  color_tile.hpp
lib/rpgmapper/unitconverter/: alphabetic.cpp  alphabetic.hpp  alphabeticbigcapsconverter.cpp  alphabeticbigcapsconverter.hpp  alphabeticsmallcapsconverter.cpp  alphabeticsmallcapsconverter.hpp  numericconverter.cpp  numericconverter.hpp  romanconverter.cpp  romanconverter.hpp
lib/rpgmapper/zip/: zip.cpp  zip.hpp
share/rpgmapper/: parchment.xcf  rpgmapper.xcf
test/: CMakeLists.txt  test_atlas.cpp  test_average.cpp  test_commands.cpp  test_coordinate_system.cpp  test_field.cpp  test_layer.cpp  test_map.cpp  test_map_commands.cpp  test_nameable.cpp  test_numerals.cpp  test_region.cpp  test_resource.cpp  test_session.cpp  test_tile.cpp
test/ctrl/: CMakeLists.txt  test_file.cpp
test/data/: test.atlas
test/model/: CMakeLists.txt  test_atlas_changeable.cpp  test_atlas_clone.cpp  test_atlas_json.cpp  test_converter.cpp  test_field_coordinate.cpp  test_file.cpp  test_map_point.cpp  test_map_size.cpp
test/qttar/: CMakeLists.txt  tartool.cpp  test_qttar.cpp
test/unit/: CMakeLists.txt  test_atlas.cpp  test_atlas_io.cpp  test_atlas_writer.cpp  test_average.cpp  test_changeable.cpp  test_commands.cpp  test_coordinate_system.cpp  test_field.cpp  test_filesystem.cpp  test_layer.cpp  test_map.cpp  test_map_commands.cpp  test_nameable.cpp  test_numerals.cpp  test_prozessor.cpp  test_region.cpp  test_resource.cpp
(+57 files in other folders)
